# wxxb

./: BUG_FIXES_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_STATUS_REPORT.md  FONT_COLOR_FIX.md  FUNCTIONALITY_VERIFICATION_REPORT.md  GETTING_STARTED.md  GITHUB_HOTSPOT_NODES_FEATURE.md  GRBL_COMMANDS_FEATURE.md  GRBL_COMMAND_REFERENCE_INTEGRATION.md  GRBL_SERIAL_FIX.md  HOTSPOT_NODES_INTEGRATION_SUMMARY.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_STEPS.md  MANUAL_TESTING.md  PROGRESS_REPORT.md  PROJECT_COMPLETION_STATUS.md  PROJECT_FINAL_SUMMARY.md  PROJECT_STATUS_REPORT.md  PROXY_MODULE_FEATURES.md  PROXY_NODE_INTEGRATION_SUMMARY.md  PROXY_NODE_MANAGEMENT.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  STARTUP_SUCCESS.md  TASK_13.2_SUMMARY.md  TASK_13.3_IMPLEMENTATION.md  TASK_13.4_IMPLEMENTATION.md  TASK_13.4_VISUAL_GUIDE.md  TASK_14-16_IMPLEMENTATION.md  TASK_18_IMPLEMENTATION.md  TASK_19_IMPLEMENTATION.md  TASK_20_IMPLEMENTATION.md  TASK_21_IMPLEMENTATION.md  TASK_21_SUMMARY.md  TASK_22_IMPLEMENTATION.md  TASK_22_SUMMARY.md  TASK_23_SUMMARY.md  (+18 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  FAQ.md  INSTALLATION_GUIDE.md  MODULE_DEVELOPMENT.md  TESTING_GUIDE.md  USER_MANUAL.md
logs/: .ab549eb99af30e0c13a7240986b3f53331b7e094-audit.json
tests/: test_all_modules_import.py  test_ble_module.py  test_checkpoint_17.py  test_clash_client.py  test_cli_clash.py  test_cli_client.py  test_cli_grbl.py  test_cli_serial_term.py  test_client_model.py  test_cross_platform.py  test_dashboard_integration.py  test_grbl.py  (+18 more)
(+65 files in other folders)
